Update config.ini [1.0.1]

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [main]
-app_url = https://shorten-url.jbs.ovh
+app_url = https://shorten-that.jbs.ovh
 app_secret_key = 
 port = 6700
 debug = False
