Repair some problems [1.0.2]
"urls.ini" wasn't mounted as volume in "docker-compose.yml"; now it is

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,4 +6,5 @@ services:
         image: shorten-that
         volumes:
             - ./config.ini:/app/config.ini
+            - ./urls.ini:/app/urls.ini
         restart: unless-stopped
