Add setup screen [1.1.0]

--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,9 @@
 [main]
-app_url = https://shorten-that.jbs.ovh
+setuped = False
+app_url = 
 app_secret_key = 
 port = 5000
 debug = False
 password = 
-default_url_lenght = 8
+default_url_length = 
+
