--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
     yourowncard:
-        container_name: shorten-that
+        container_name: shorten-this
         ports:
             - 5000:5000 # <Host Port>:<Container Port (do not change)>
         image: shorten-that
