Change database.db to external file [7.0.2]

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,4 +4,6 @@ services:
         ports:
             - 5000:5000 # <Host Port>:<Container Port (do not change)>
         image: jedrzejme/shorten-this:latest
+        volumes:
+            - database.db:/app/database.db
         restart: unless-stopped
